# ticket-2-code-ai-agent

./: .env.example  .gitignore  .pre-commit-hook.yaml  LICENSE.md  main.py  pyproject.toml
.cursor/rules/: commit.mdc
config/: config.yaml
src/tickettocodeagent/: processor.py
src/tickettocodeagent/config/: config.py  env.py
src/tickettocodeagent/examples/: messages.py
src/tickettocodeagent/model/: model.py
src/tickettocodeagent/tools/: git.py
src/tickettocodeagent/tools/git_provider/: azdo_adapter.py  git_provider_port.py  github_adapter.py
